# mini_networks

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: build-train-image.yml  ci.yml  infra.yml
colab/notebooks/: 00_sweep.ipynb  01_vision.ipynb  02_language.ipynb  03_rl.ipynb  04_compositions.ipynb  viz.py
docs/: 00-overview.md  01-data.md  02-classifiers.md  03-autoencoders.md  04-gan.md  05-diffusion.md  06-sequence-models.md  07-lora-finetuning.md  08-rag.md  09-clip-multimodal.md  10-rl-rlhf.md  11-compositions.md  README.md  adding_datasets.md  compositions.md  datasets.md  models.md  multimodal_blocks.md  runs_and_logging.md
docs/superpowers/specs/: 2026-06-12-ultimate-educational-resource-design.md  2026-06-24-playground-and-gcp-training-design.md
frontend/: api.js  app.js  chart.js  format.js  index.html  lab.js  lessons.js  main.js  samples.js  sandbox.js  style.css
infra/gcp/: Dockerfile.app  Dockerfile.train  Makefile  README.md  cloudbuild-app.yaml  cloudbuild.yaml  entrypoint-app.sh  entrypoint.sh
infra/gcp/function/: main.py  requirements.txt
infra/gcp/terraform/: .terraform.lock.hcl  app_service.tf  backend.tf  budget.tf  cloud_run_job.tf  gcs.tf  iam.tf  (+8 more)
legacy/: distilation_and_clip_and_multimodal.py  lecture_unet_to_yolo_byme.py  nano_moe_flashattention_mamba_bpe_grpo.py
legacy/012-transformer-gptrl/: miniMoERLHF_1.py
legacy/013-autoregressive-diff/: miniAutoregressiveDiffusion.py
legacy/014-rag/: miniRAG.py
legacy/transformer-gptrl/: miniMoEGRPO_2.py  miniMoeGRPO_1.py
legacy/transformer-moe/: miniMoE_1.py  miniMoE_2.py
playground/: next.config.ts  package-lock.json  package.json
playground/app/: globals.css  layout.tsx  page.tsx
playground/components/: hero-mascot.tsx  loss-chart.tsx  mascots.tsx  panel.tsx  scene.tsx  statusbar.tsx  topbar.tsx
playground/hooks/: use-runs.ts
playground/lib/: api.ts  format.ts  fx.ts  types.ts
scripts/: render_results.py
tests/: conftest.py  test_api.py  test_champions.py  test_checkpointing.py  test_clip.py  test_clip_guided_diffusion.py  test_cloud_publisher.py  test_core.py  test_detection.py  test_diffusion.py  test_disable_train.py  test_gan.py  test_gan_diffusion_comparison.py  test_logger_mlflow.py  test_lora.py  test_mamba.py  test_mlflow_registry.py  test_multimodal_blocks.py  test_new_compositions.py  test_rag.py  test_render_results.py  test_rl_maze.py  test_rl_rlhf_maze.py  test_rlhf.py  test_rnn.py  test_segmentation.py  test_smoke_models.py  test_smoke_registry.py  test_sweep_check.py  test_sweep_shard.py  test_transformer.py  test_transformer_blocks.py  test_transformer_clip_diffusion.py  test_web_lessons.py  test_web_metrics.py  test_web_router.py  test_web_sources.py
(+191 files in other folders)
