[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-networks"
version = "0.1.0"
description = "Unified educational ML package: CLIP, Diffusion, Transformer, Segmentation, Detection"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0,<2.3.0",
    "torchvision>=0.16.0,<0.18.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "einops>=0.7.0",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_networks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that run full training loops (skip with: -m 'not slow')",
]
addopts = "-m 'not slow'"
